_css/custom.css
:root {
    --offwhite: #fdfdfd;
    --midgray: #898989;
    --sidebarcolor: #191738;
    --offblack: #323232;
    --detailscolor: #eeeeff;
}

html {
  font-size: 15px;
}

body{
    background-color: var(--offwhite);
    color: var(--offblack);
}

.franklin-content {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 1.4rem;
    padding-left: 10%;
    padding-right: 10%;
}

@media (min-width: 768px) {
.content {
    max-width: 60rem;
    margin-left: 10rem;
}
}

@media (min-width: 940px) {
.franklin-content {
    width: inherit;
}
}

.content {
    padding-top: 2rem;
    padding-bottom: 2rem;
}

.sidebar {
  padding: 2rem 1rem;
  background-color: var(--sidebarcolor);
  font-size: 1.4rem;
}

.sidebar-about h1 {
    font-size: 2.5rem;
    font-family: 'Catamaran', sans-serif;
}

.sidebar-about img {
    border-radius: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 10rem;
    border: 3px solid var(--offwhite);
}

.sidebar-social {
    text-align: center;
}

.sidebar-social svg {
    padding-left: 0.25rem;
    padding-right: 0.25rem;
    width: 2.7rem;
    fill: var(--midgray);
}

.sidebar-social svg:hover {
    fill: var(--offwhite);
}  

@media (min-width: 768px) {
.sidebar {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    width: 13rem;
    text-align: left;
}
}

@media (min-width: 768px) {
    .sidebar-sticky {
      position: absolute;
      right:  1rem;
      top:    1rem;
      left:   1rem;
    }

    .sidebar-sticky .sidebar-social {
      position: absolute;
      right:  0rem;
      bottom: 0rem;
      left:   0rem;
    }
  }

.franklin-content h1, h2, h3 {
    font-family: "PT Sans", Helvetica, Arial, sans-serif;
    margin-top: 0;
    margin-bottom: 0.5em;
    border-bottom: none;
}
.franklin-content h1 { font-size: 2.4rem; }
.franklin-content h2 { font-size: 2.0rem; }
.franklin-content h3 { font-size: 1.6rem; }

/* blog format */

.blog-header {
    padding-bottom: 2rem;
}

.blog-header h1 {
    margin-bottom: 0;
    padding-bottom: 0;
}

.blog-header .date {
    color: var(--midgray);
    font-size: 90%;
}

.blog-header .rss-icon {
    float: right;
  }

.blog-header .rss-icon svg {
    width: 35px;
    fill: var(--midgray);
}

.blog-header .rss-icon svg:hover {
    fill: var(--offblack);
}

.blog-foot {
    font-size: 80%;
    text-align: center;
}

details{
    background-color: var(--detailscolor);
    border-radius: 1rem;
    padding: 0.5rem;
    overflow: auto;
}

/* disable equation numbering in details boxes */
details .katex-display::after {
    counter-increment: none;
    content: none;
}

/* code format */

@font-face {
    font-family: JuliaMono-Regular;
    src: url("https://cdn.jsdelivr.net/gh/cormullion/juliamono/webfonts/JuliaMono-Regular.woff2");
}

pre > code {
    margin: 1rem;
}

.hljs {
    font-family: "JuliaMono";
    font-variant-ligatures: no-contextual;
    font-feature-settings: "zero", "ss02";
}

